--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Calculadora de  IMC</string>
+    <string name="app_name"></string>
+    <string name="titulo">Calculadora de IMC</string>
+    <string name="peso">Informe seu Peso (kg)</string>
+    <string name="altura">Informe sua Altura (metro e cm)</string>
+    <string name="calcular">Calcular IMC</string>
+    <string name="resultado">Resultado</string>
 </resources>
